<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
           http://maven.apache.org/POM/4.0.0
           http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ROOT PROJECT -->
    <groupId>com.app</groupId>
    <artifactId>service-management-system</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Service Management System</name>
    <description>Microservices-based Service Management Platform</description>

    <!-- ===================== PROPERTIES ===================== -->
    <properties>
        <java.version>17</java.version>

        <spring.boot.version>3.2.5</spring.boot.version>
        <spring.cloud.version>2023.0.3</spring.cloud.version>

        <!-- Sonar -->
        <sonar.maven.plugin.version>3.11.0.3922</sonar.maven.plugin.version>

        <!-- EXCLUDE INFRA SERVICES COMPLETELY -->
        <sonar.exclusions>
            **/eureka-server/**,
            **/config-server/**,
            **/api-gateway/**
        </sonar.exclusions>

        <!-- EXCLUDE BOILERPLATE FROM COVERAGE -->
        <sonar.coverage.exclusions>
            **/*Application.java,
            **/entity/**,
            **/model/**,
            **/dto/**,
            **/client/**,
            **/security/**,
            **/util/**,
            **/feign/**,
            **/config/**,
            **/repository/**,
            **/exception/**,
            **/messaging/**,
            **/seeder/**
        </sonar.coverage.exclusions>
    </properties>

    <!-- ===================== MODULES ===================== -->
    <modules>
        <module>eureka-server</module>
        <module>api-gateway</module>
        <module>identity-service</module>
        <module>service-operations-service</module>
        <module>technician-service</module>
        <module>notification-service</module>
        <module>config-server</module>
    </modules>

    <!-- ===================== DEPENDENCY MANAGEMENT ===================== -->
    <dependencyManagement>
        <dependencies>

            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <!-- ===================== BUILD ===================== -->
    <build>

        <!-- EXECUTABLE PLUGINS -->
        <plugins>

            <!-- SONAR MAVEN PLUGIN -->
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${sonar.maven.plugin.version}</version>
            </plugin>

        </plugins>

        <!-- PLUGIN MANAGEMENT -->
        <pluginManagement>
            <plugins>

                <!-- SPRING BOOT -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>

                <!-- COMPILER -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>

    </build>

</project>
